<resources>
    <string name="app_name">My Application</string>
    <string name="Buttonw">button1</string>
    <string name="username">please enter username</string>
    <string name="password">please enter password</string>
    <string name="SignInButton">Sign In</string>
    <string name="SignOutButton">SIgn Out</string>
    <string name="BussinessButton">For Bussiness</string>
    <string name="signup_text">Create a new acount</string>
    <string name="uername">Pick up a username for your acount</string>
    <string name="SignUpUsername">Pick up a username for your acount</string>
    <string name="SignUpPassword">Pick up a password for your acount</string>
    <string name="SignUpGendar">Pick up your gender: M/FM</string>
    <string name="SignUpBirthday">Enter your birthday, such as: 1995/04/24</string>
    <string name="FinishButton">Finish</string>
    <string name="textView">okokok</string>
    <string name="enter_birthday">enter birthday for regist</string>
    <string name="RegisterSuccess">Register Successfully!</string>
    <string name="Welcome">Welcome!!!</string>
    <string name="textview">Bussiness Use</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_page">Map</string>
    <string name="store_supreme_description">Supreme is an American skateboarding shop and clothing brand established in New York City in April 1994. The brand caters to the skateboarding and hip hop cultures as well as to youth culture in general. ... Its shoes, clothing, and accessories are sold extensively in the secondary market.</string>
    <string name="supreme_logo">supremem_logo</string>
    <string name="supreme_introduction_picture1">TODO</string>

    <string name="nike_name">Nike</string>
    <string name="StroreDescription">StoreDescription</string>
    <string name="StoreDescription">"Store Description: "</string>
    <string name="EditStoreDescription">"Store Description: "</string>
    <string name="StoreLatitude">Store Latitude:</string>
    <string name="StoreLongitude">Store Longitude:</string>
    <string name="StoreLaititudeValue">0.0</string>
    <string name="StoreLongitudeValue">0.0</string>
    <string name="defaultlatitude">0.0</string>
    <string name="StoreName">Store Name:</string>
    <string name="ChangeStoreSuccess">Change succesful</string>
    <string name="LogOut">Log out</string>
    <string name="add_shop_button">Add New SHop</string>
    <string name="signoutvalue">Sign Up</string>
    <string name="login_value">Log In</string>
    <string name="warning" />
    <string name="SignUp">Sign Up</string>

</resources>
