<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="122dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/supreme"
        android:contentDescription="@string/supreme_logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="391dp"
        android:layout_height="151dp"
        android:layout_marginBottom="12dp"
        android:text="@string/store_supreme_description"
        android:textColor="#221B1B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="326dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="365dp"
        android:layout_height="663dp"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/supreme_introduction_picture1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/supreme_car" />

</androidx.constraintlayout.widget.ConstraintLayout>